--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.thymeleaf.mode=HTML
 # Postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
