--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.thymeleaf.mode=HTML
 # Postgresql
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATABASE_URL}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=${DATABASE_URL}
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+# MySQL
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/winedb?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
